# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "psi_proto",
    srcs = ["psi.proto"],
)

cc_proto_library(
    name = "psi_cc_proto",
    deps = [":psi_proto"],
)

proto_library(
    name = "pir_proto",
    srcs = ["pir.proto"],
)

cc_proto_library(
    name = "pir_cc_proto",
    deps = [":pir_proto"],
)

proto_library(
    name = "psi_v2_proto",
    srcs = ["psi_v2.proto"],
    deps = [
        ":psi_proto",
    ],
)

cc_proto_library(
    name = "psi_v2_cc_proto",
    deps = [":psi_v2_proto"],
)

proto_library(
    name = "entry_proto",
    srcs = ["entry.proto"],
    deps = [
        ":pir_proto",
        ":psi_proto",
        ":psi_v2_proto",
        "@yacl//yacl/link:link_proto",
    ],
)

cc_proto_library(
    name = "entry_cc_proto",
    deps = [":entry_proto"],
)

proto_library(
    name = "kuscia_proto",
    srcs = ["kuscia.proto"],
    deps = [
        ":entry_proto",
    ],
)

cc_proto_library(
    name = "kuscia_cc_proto",
    deps = [":kuscia_proto"],
)
