# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "seal_pir",
    srcs = ["seal_pir.cc"],
    hdrs = ["seal_pir.h"],
    linkopts = [
        "-ldl",
        "-lm",
    ],
    deps = [
        ":seal_pir_utils",
        "//psi/seal_pir:serializable_cc_proto",
        "@com_github_microsoft_seal//:seal",
        "@com_github_openssl_openssl//:openssl",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:parallel",
    ],
)

psi_cc_library(
    name = "seal_pir_utils",
    srcs = ["seal_pir_utils.cc"],
    hdrs = ["seal_pir_utils.h"],
    deps = [
        "@com_github_microsoft_seal//:seal",
        "@yacl//yacl/base:exception",
    ],
)

psi_cc_library(
    name = "seal_mpir",
    srcs = ["seal_mpir.cc"],
    hdrs = ["seal_mpir.h"],
    deps = [
        ":seal_pir",
        "//psi/utils:cuckoo_index",
        "@yacl//yacl/crypto/block_cipher:symmetric_crypto",
    ],
)

proto_library(
    name = "serializable_proto",
    srcs = ["serializable.proto"],
)

cc_proto_library(
    name = "serializable_cc_proto",
    deps = [":serializable_proto"],
)

psi_cc_test(
    name = "seal_pir_test",
    srcs = ["seal_pir_test.cc"],
    deps = [
        ":seal_pir",
    ],
)

psi_cc_test(
    name = "seal_mpir_test",
    srcs = ["seal_mpir_test.cc"],
    deps = [
        ":seal_mpir",
        "//psi/cryptor:sodium_curve25519_cryptor",
        "@com_google_absl//absl/strings",
    ],
)
