# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "utils",
    srcs = ["utils.py"],
    deps = [
        "//psi",
    ],
)

py_test(
    name = "legacy_psi_test",
    srcs = ["legacy_psi_test.py"],
    data = [
        "//psi/tests/data",
    ],
    flaky = True,
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":utils",
        "//psi",
    ],
)

py_test(
    name = "psi_test",
    srcs = ["psi_test.py"],
    data = [
        "//psi/tests/data",
    ],
    flaky = True,
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":utils",
        "//psi",
    ],
)

py_test(
    name = "ub_psi_test",
    srcs = ["ub_psi_test.py"],
    data = [
        "//psi/tests/data",
    ],
    flaky = True,
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":utils",
        "//psi",
    ],
)

py_test(
    name = "pir_test",
    srcs = ["pir_test.py"],
    data = [
        "//psi/tests/data",
    ],
    flaky = True,
    tags = [
        "exclusive-if-local",
    ],
    deps = [
        ":utils",
        "//psi",
    ],
)
