# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:psi.bzl", "psi_cc_binary", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "piano_proto",
    srcs = ["piano.proto"],
)

cc_proto_library(
    name = "piano_cc_proto",
    deps = [":piano_proto"],
)

psi_cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "@yacl//yacl/crypto/aes:aes_intrinsics",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_library(
    name = "serialize",
    srcs = ["serialize.h"],
    deps = [
        ":piano_cc_proto",
        ":util",
        "@yacl//yacl/base:buffer",
    ],
)

psi_cc_library(
    name = "server",
    srcs = ["server.cc"],
    hdrs = ["server.h"],
    deps = [
        ":piano_cc_proto",
        ":serialize",
        ":util",
        "@yacl//yacl/link:context",
    ],
)

psi_cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.h"],
    deps = [
        ":piano_cc_proto",
        ":serialize",
        ":util",
        "@yacl//yacl/link:context",
    ],
)

psi_cc_test(
    name = "piano_test",
    timeout = "eternal",
    srcs = ["piano_test.cc"],
    deps = [
        ":client",
        ":server",
        ":util",
        "@yacl//yacl/link:context",
        "@yacl//yacl/link:test_util",
    ],
)

psi_cc_binary(
    name = "piano_benchmark",
    srcs = ["piano_benchmark.cc"],
    deps = [
        ":client",
        ":server",
        ":util",
        "@com_github_google_benchmark//:benchmark_main",
        "@yacl//yacl/link:context",
        "@yacl//yacl/link:test_util",
    ],
)
